# VC-PWQ

./: .gitignore  CMakeLists.txt  Install.sh  License-CC BY-NC 3-0.txt  README.md  doxygen.config  format.sh  requirements.txt
cmake/: catch2.cmake
source/: CMakeLists.txt
source/constants/: constants.hpp
source/decoder/: CMakeLists.txt
source/decoder/include/: Decoder.hpp  DecoderInterface.hpp
source/decoder/src/: Decoder.cpp  DecoderInterface.cpp
source/encoder/: CMakeLists.txt
source/encoder/include/: Encoder.hpp  EncoderInterface.hpp
source/encoder/src/: Encoder.cpp  EncoderInterface.cpp
source/losslessCoding/: CMakeLists.txt
source/losslessCoding/include/: ArithDec.hpp  ArithEnc.hpp  SPIHT_Dec.hpp  SPIHT_Enc.hpp
source/losslessCoding/src/: ArithDec.cpp  ArithEnc.cpp  SPIHT_Dec.cpp  SPIHT_Enc.cpp
source/psychohapticModel/: CMakeLists.txt
source/psychohapticModel/include/: PeakFiltering.hpp  PsychohapticModel.hpp
source/psychohapticModel/src/: PeakFiltering.cpp  PsychohapticModel.cpp
source/psychohapticModel/test/: PeakFiltering.test.cpp  PsychohapticModel.test.cpp
source/testprogram/: CMakeLists.txt
source/testprogram/src/: main.cpp
source/utilities/: CMakeLists.txt
source/utilities/include/: Utilities.hpp  types.hpp
source/utilities/src/: Utilities.cpp
source/utilities/test/: Utilities.test.cpp
source/wavelet/: CMakeLists.txt
source/wavelet/include/: Wavelet.hpp
source/wavelet/src/: Wavelet.cpp
source/wavelet/test/: Wavelet.test.cpp
